--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button type="button" class="btn btn-grey" data-num="0">0</button>
         <button type="button" class="btn btn-grey" data-num=".">.</button>
         <button type="button" class="btn btn-AC" >AC</button>
-        <button type="button" class="btn btn-equal" >=</button>
+        <button type="button" class="oxy btn-equal" >=</button>
       </div>
 
     </section>
